# rust-srvstatus-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
bot/: bot.py  config.py
systemd/: rustbot.service.example
tests/: test_bot.py  test_config.py
